manifests/prod/ns.patch.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: howmanywins
  annotations:
    cnrm.cloud.google.com/project-id: megadoomer
