manifests/prod/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: howmanywins
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`howmanywinsdoesbrucebochyhave.com`) || Host(`www.howmanywinsdoesbrucebochyhave.com`)
      kind: Rule
      services:
        - name: howmanywins
          port: 80
  tls:
    secretName: howmanywins-cert
